--- a/06_Project/frontend/package.json
+++ b/06_Project/frontend/package.json
@@ -8,23 +8,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.6",
-    "@angular/common": "~11.0.6",
-    "@angular/compiler": "~11.0.6",
-    "@angular/core": "~11.0.6",
-    "@angular/forms": "~11.0.6",
-    "@angular/platform-browser": "~11.0.6",
-    "@angular/platform-browser-dynamic": "~11.0.6",
-    "@angular/router": "~11.0.6",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "^15.1.5",
+    "@angular/common": "^15.1.5",
+    "@angular/compiler": "^15.1.5",
+    "@angular/core": "^15.1.5",
+    "@angular/forms": "^15.1.5",
+    "@angular/platform-browser": "^15.1.5",
+    "@angular/platform-browser-dynamic": "^15.1.5",
+    "@angular/router": "^15.1.5",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.5.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.6",
-    "@angular/cli": "~11.0.6",
-    "@angular/compiler-cli": "~11.0.6",
-    "@types/node": "^12.11.1",
-    "typescript": "~4.0.2"
+    "@angular-devkit/build-angular": "^15.1.6",
+    "@angular/cli": "^15.1.6",
+    "@angular/compiler-cli": "^15.1.5",
+    "@types/node": "^18.13.0",
+    "typescript": "~4.9.5"
   }
 }
